Fix: problema con la scrollbar en mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -59,6 +59,10 @@ h1 {
     --content-padding: 2rem;
   }
 
+  .App-results {
+    margin-bottom: 2rem;
+  }
+
   .App-main {
     margin-left: 0;
     /* min-height: calc(100vh - 123.77px); */
